# This is a template for setup.cfg. After you clone this for a new project:
# -   Update [metadata]
# -   Update dependencies in `install_requires`
# -   [options.package_data] is optional. Delete if not needed. Also delete the sample file in data/**/*
# -   `console_scripts` is optional. Delete if not needed.

[metadata]
name = load-testing
version = attr:load_testing.__version__
description = A Collection of scripts for load testing our services using locust.io
url = https://github.com/aquabyte-new
author = Rishabh Malviya
author_email = rishabh@aquabyte.ai

[options]
package_dir=
    =src
packages=find:
install_requires =
    locust
    boto3==1.17.99

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    hello = helloworld_app.helloworld_app:main
